# tech-to-speak

backend_tech_to_speak/: .env  README.md  main.py  pyproject.toml
backend_tech_to_speak/controllers/: audio_controller.py  file_controller.py  image_controller.py  jargon_controller.py
backend_tech_to_speak/models/: file_models.py  image_models.py  jargon_models.py
backend_tech_to_speak/services/: gemini_service.py
frontend_tech_to_speak/: package-lock.json  package.json
frontend_tech_to_speak/app/: globals.css  layout.tsx  page.tsx
frontend_tech_to_speak/app/api/save-audio/: route.ts
frontend_tech_to_speak/app/file/: page.tsx
frontend_tech_to_speak/app/hooks/: useAudioRecorder.ts
frontend_tech_to_speak/app/image/: page.tsx
frontend_tech_to_speak/app/services/: audioService.ts  fileService.ts  imageService.ts  textService.ts
frontend_tech_to_speak/app/text/: page.tsx
frontend_tech_to_speak/app/utils/: urgency.ts
